Core presentation classes were added

--- a/base/core_presentation/build.gradle
+++ b/base/core_presentation/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     // View
     api SupportLibraries.appCompat
     api SupportLibraries.constraintLayout
+    api SupportLibraries.recyclerView
     api Libraries.lifecycleExtensions
 }
