Api response in presentation now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.nstudiosappdev.games">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".GamesApp"
         android:allowBackup="true"
