Listing page have finished and detail classes were added

--- a/base/core_presentation/build.gradle
+++ b/base/core_presentation/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     api SupportLibraries.appCompat
     api SupportLibraries.constraintLayout
     api SupportLibraries.recyclerView
+    api Libraries.glide
     api Libraries.lifecycleExtensions
 }
