Game detail ui design was started to develop

--- a/base/core_presentation/build.gradle
+++ b/base/core_presentation/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     api SupportLibraries.appCompat
     api SupportLibraries.constraintLayout
     api SupportLibraries.recyclerView
+    api SupportLibraries.materialDesign
     api Libraries.glide
     api Libraries.lifecycleExtensions
 }
